; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/ath79/files/drivers/mtd/nand/raw/extr_ar934x_nand.c_ar934x_nfc_restart.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/ath79/files/drivers/mtd/nand/raw/extr_ar934x_nand.c_ar934x_nfc_restart.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ar934x_nfc = type { i32 }

@NAND_CMD_RESET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ar934x_nfc*)* @ar934x_nfc_restart to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ar934x_nfc_restart(%struct.ar934x_nfc* %0) #0 {
  %2 = alloca %struct.ar934x_nfc*, align 8
  %3 = alloca i32, align 4
  store %struct.ar934x_nfc* %0, %struct.ar934x_nfc** %2, align 8
  %4 = load %struct.ar934x_nfc*, %struct.ar934x_nfc** %2, align 8
  %5 = getelementptr inbounds %struct.ar934x_nfc, %struct.ar934x_nfc* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  store i32 %6, i32* %3, align 4
  %7 = load %struct.ar934x_nfc*, %struct.ar934x_nfc** %2, align 8
  %8 = call i32 @ar934x_nfc_hw_init(%struct.ar934x_nfc* %7)
  %9 = load i32, i32* %3, align 4
  %10 = load %struct.ar934x_nfc*, %struct.ar934x_nfc** %2, align 8
  %11 = getelementptr inbounds %struct.ar934x_nfc, %struct.ar934x_nfc* %10, i32 0, i32 0
  store i32 %9, i32* %11, align 4
  %12 = load %struct.ar934x_nfc*, %struct.ar934x_nfc** %2, align 8
  %13 = load i32, i32* @NAND_CMD_RESET, align 4
  %14 = call i32 @ar934x_nfc_send_cmd(%struct.ar934x_nfc* %12, i32 %13)
  ret void
}

declare dso_local i32 @ar934x_nfc_hw_init(%struct.ar934x_nfc*) #1

declare dso_local i32 @ar934x_nfc_send_cmd(%struct.ar934x_nfc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
